src/assets/sass/_media.scss
@media (max-width: 991px) {
  /* blog */
  .main-blog-article-content .blog-content {
    background-color: #F5F8FA !important;
  }
  .main-blog-article-content .article .title-blog {
    background-color: #fff;
    padding-top: 2rem !important;
  }
  .share {
    bottom: 2rem;
  }
  .comments-section {
    background-color: #F5F8FA !important;
  }
  .activity-mobile {
    text-align: center;
  }
  .article .article-img {
    margin-bottom: 0;
  }
  .saved-search .edit-delete .delete {
    bottom: 24px;
  }
  .zoomers-content .followers .avatar {
    margin: 0 auto;
  }
  .zoomers-content .info {
    display: table;
  }
  .zoomers-content .name,
  .zoomers-content .clearfix,
  .zoomers-content .info {
    text-align: center;
    margin: 0 auto;
    width: 100%;
  }
  .bg-thumb {
    margin-right: 0 !important;
    margin-bottom: 2rem;
  }
  .bg-thumb .avatar, .bg-thumb .avatar img {
    width: 25rem !important;
    height: 25rem !important;
  }
  .left-menu-snap ul .map-profile a .map-icon {
    background: none;
  }
  .article-wrap .share {
    bottom: 0;
    right: 0;
    top: -2rem;
  }
  header {
    padding: 0;
  }
  header nav {
    float: left;
  }
  header nav .menu-btn {
    float: left;
  }
  header .logo {
    width: 160px;
    float: right;
    height: initial;
  }
  header .logo-mini {
    text-align: center;
  }
  .information-profile {
    text-align: center;
  }
  .information-profile .info-links a {
    display: inline-block;
    float: none;
  }
}

@media (max-width: 991px) and (min-width: 767px) {
  .information-profile .avatar-wrap .avatar {
    width: 10rem;
    height: 10rem;
  }
}
@media (max-width: 767px) {
  .authentication .modal-dialog {
    width: 100% !important;
    margin: 30px auto;
  }
}

@media (max-width: 640px) {
  /* blog */
  .article-info .share {
    bottom: 2.5rem;
  }
  .article-wrapper, .article-wrap {
    margin-bottom: 2rem;
    padding: 0;
  }
  //.import-friendmap {
  //  margin-right: 4rem;
  //}
  .zoomers-content .info .counters {
    left: 35%;
    width: 50%;
  }
}

@media (max-width: 500px) {
  header nav ul li .user-name {
    max-width: 140px;
    padding: 0 5px;
  }
  header nav ul li .user-name span:first-of-type {
    max-width: 60%;
  }
}

@media (max-width: 400px) {
  header {
    padding: 0;
  }
  header .logo {
    width: 90px;
  }
  header .menu-btn .menu-icon {
    margin: 24px 10px;
    background-size: 100%;
  }
  header nav ul .map-profile a {
    padding: 0 1.5rem;
  }
  header nav ul .map-profile a span img {
    width: 26px;
    height: 26px;
  }
  header nav ul li .user-name {
    max-width: 120px;
  }
  .friends-wrapper {
    border: 1px solid #e9edf0;
  }
  .zoomers-content .info .counters {
    left: 22%;
    width: 60%;
  }
}

@media (max-width: 380px) {
  .add-page, .google-plus-friendmap {
    top: 0 !important;
  }
  .import-friendmap {
    top: -1rem !important;
  }
}

//iphone 6 plus
@media (max-width: 414px) {
  .sidebar-menu-vertical ul {
    li {
      .pit-stops {
        background: url(../img/svg/Icon_Grab_Grub.svg) no-repeat center center;
        background-size: 45px;
      }
      .recreation {
        background: url(../img/svg/Icon_To_do.svg) no-repeat center center;
        background-size: 40%;
      }
      .shelter {
        background: url(../img/svg/Icon_Get_a_room_mouseover.svg) no-repeat center center;
        background-size: 45%;
      }
    }
    li.active {
      &:hover, &:active {
        .pit-stops {
          background: url(../img/svg/Icon_Grab_Grub.svg) no-repeat center center;
          background-size: 45px;
        }
        .recreation {
          background: url(../img/svg/Icon_To_do.svg) no-repeat center center;
          background-size: 40%;
        }
        .shelter {
          background: url(../img/svg/Icon_Get_a_room_mouseover.svg) no-repeat center center;
          background-size: 45%;
        }
      }
    }
  }
  .add-friend {
    right: 6rem;
  }
}


//iphone 6
@media (max-width: 375px) {
  .add-friend {
    right: 6.6rem;
    top: 0 !important;
  }
  .event .row share .wrap-from-share .share {
    bottom: 1rem !important;
    right: -1rem;
  }
  .sidebar-menu-vertical ul {
    li {
      .pit-stops {
        background: url(../img/svg/Icon_Grab_Grub.svg) no-repeat center center;
        background-size: 45px;
      }
      .recreation {
        background: url(../img/svg/Icon_To_do.svg) no-repeat center center;
        background-size: 45%;
      }
      .shelter {
        background: url(../img/svg/Icon_Get_a_room_mouseover.svg) no-repeat center center;
        background-size: 55%;
      }
    }
    li.active {
      &:hover, &:active {
        .pit-stops {
          background: url(../img/svg/Icon_Grab_Grub.svg) no-repeat center center;
          background-size: 45px;
        }
        .recreation {
          background: url(../img/svg/Icon_To_do.svg) no-repeat center center;
          background-size: 45%;
        }
        .shelter {
          background: url(../img/svg/Icon_Get_a_room_mouseover.svg) no-repeat center center;
          background-size: 55%;
        }
      }
    }
  }
}

@media (max-width: 330px) {
  .zoomers-content .info .counters {
    left: 12%;
    width: 80%;
  }
}

//iphone 5
@media (max-width: 320px) {
  .btn-back {
    top: 0 !important;
  }
  .add-friend {
    right: 1.6rem;
  }
  .sidebar-menu-vertical ul {
    li {
      .pit-stops {
        background: url(../img/svg/Icon_Grab_Grub.svg) no-repeat center center;
        background-size: 70%;
      }
      .recreation {
        background: url(../img/svg/Icon_To_do.svg) no-repeat center center;
        background-size: 45%;
      }
      .shelter {
        background: url(../img/svg/Icon_Get_a_room_mouseover.svg) no-repeat center center;
        background-size: 55%;
      }
    }
    li.active {
      &:hover, &:active {
        .pit-stops {
          background: url(../img/svg/Icon_Grab_Grub.svg) no-repeat center center;
          background-size: 70%;
        }
        .recreation {
          background: url(../img/svg/Icon_To_do.svg) no-repeat center center;
          background-size: 45%;
        }
        .shelter {
          background: url(../img/svg/Icon_Get_a_room_mouseover.svg) no-repeat center center;
          background-size: 55%;
        }
      }
    }

  }
}

